Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-30824

Crash on reload externally modified files

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • None
    • Qt Creator 13.0.0
    • None
    • Linux/X11
    • 85617f136 (13.0)

    Description

      I failed to come up with something reproducible..

       

      What I did: had QC open as repository and was testing/verifying a couple of patches which added some files to the repo.

      some git work I did from inside QC, some directly on the command line (diff, stash, reset, cherry-pick, commit/amend in various ways)

      after I did some reset or cherry-pick ( ? ) I was prompted for reloading modified files and I confirmed with "Yes, all" - then QC crashed

       

      attached the bt from the core file I got

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              aha_1980 André Hartmann
              cstenger Christian Stenger
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes