Git: Avoid crash when reloading files

Explicitly reset the document when the document gets closed.

Task-number: QTCREATORBUG-30824
Change-Id: I4fb3d6fd6041990e5b8b4f6b7c4fd9ebc62f5a4a
Reviewed-by: Orgad Shaneh <orgads@gmail.com>
Reviewed-by: André Hartmann <aha_1980@gmx.de>